# KrishiCred

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  start.sh
docs/: 01-one-page-pitch.md  02-complete-blueprint.md  03-technical-architecture.md  04-business-model.md  05-go-to-market.md
krishicred_backend/: .env.example  ARCHITECTURE.md  README.md  krishicred.db  pyproject.toml
krishicred_backend/app/: __init__.py  main.py  main_simple.py
krishicred_backend/app/api/: __init__.py
krishicred_backend/app/api/v1/: __init__.py  carbon.py  farmers.py  firewatch.py  plants.py  stubble.py
krishicred_backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
krishicred_backend/app/db/: __init__.py  base.py  session.py
krishicred_backend/app/models/: __init__.py  biogas_plant.py  carbon_credit.py  farmer.py  fire_alert.py  route.py
krishicred_backend/app/repositories/: __init__.py  biogas_plant.py  carbon_credit.py  farmer.py  fire_alert.py  route.py
krishicred_backend/app/schemas/: __init__.py  biogas_plant.py  carbon_credit.py  farmer.py  fire_alert.py  route.py
krishicred_backend/app/services/: __init__.py
krishicred_backend/app/services/carbon/: __init__.py  calculator.py  monetizer.py  verifier.py
krishicred_backend/app/services/firewatch/: __init__.py  alerting.py  detector.py
krishicred_backend/app/services/stubble/: __init__.py  dispatcher.py  matcher.py  optimizer.py
krishicred_backend/app/tasks/: __init__.py  carbon_tasks.py  celery_app.py  notification_tasks.py  routing_tasks.py  satellite_tasks.py
krishicred_backend/app/utils/: __init__.py  geo.py  i18n.py  whatsapp.py
krishicred_backend/docker/: Dockerfile
krishicred_backend/requirements/: base.txt
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_partition_maintenance.down.sql  002_partition_maintenance.up.sql  003_initial_translations.down.sql  003_initial_translations.up.sql  README.md
stitch_assets/: API Documentation.json  Design Brief PRD.json  Farmer Flow Diagram.json  Government Flow Diagram.json  KrishiCred Government Monitor.json  KrishiCred Home.json  KrishiCred Marketplace.json  KrishiCred Plant Dashboard.json  Plant Flow Diagram.json  README.md  design_system_assets_764627df2daf40f7ae84a4d45052da04.json  design_system_assets_8a1f93428e474c10adea95609da466a2.json  design_systems.json  krishicred-landing-code.json  mcp_tools.json  project.json  screens_list.json
stitch_assets/code/: KrishiCred Home.html  (+15 more)
tests/: README.md  conftest.py  test_api.py  test_models.py
website/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js
(+37 files in other folders)
